docs/api/qiskit/0.19/qiskit.providers.aer.extensions.SnapshotExpectationValue.mdx
---
title: SnapshotExpectationValue (v0.19)
description: API reference for qiskit.providers.aer.extensions.SnapshotExpectationValue in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotExpectationValue
---

# SnapshotExpectationValue

<Class id="qiskit.providers.aer.extensions.SnapshotExpectationValue" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/extensions/snapshot_expectation_value.py" signature="SnapshotExpectationValue(label, op, single_shot=False, variance=False)" modifiers="class">
  Snapshot instruction for supported methods of Qasm simulator.

  Create a probability snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **op** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – operator to snapshot.
  *   **single\_shot** (*bool*) – return list for each shot rather than average \[Default: False]
  *   **variance** (*bool*) – compute variance of probabilities \[Default: False]

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  ## Attributes

  <span id="snapshotexpectationvalue-decompositions" />

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotExpectationValue.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="snapshotexpectationvalue-definition" />

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotExpectationValue.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="snapshotexpectationvalue-label" />

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotExpectationValue.label">
    Return snapshot label
  </Attribute>

  <span id="snapshotexpectationvalue-params" />

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotExpectationValue.params">
    return instruction params.
  </Attribute>

  <span id="snapshotexpectationvalue-snapshot-type" />

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotExpectationValue.snapshot_type">
    Return snapshot type
  </Attribute>

  ## Methods

  <span id="snapshotexpectationvalue-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.add_decomposition" signature="SnapshotExpectationValue.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="snapshotexpectationvalue-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.assemble" signature="SnapshotExpectationValue.assemble()">
    Assemble a QasmQobjInstruction for snapshot\_expectation\_value.
  </Function>

  <span id="snapshotexpectationvalue-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.broadcast_arguments" signature="SnapshotExpectationValue.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="snapshotexpectationvalue-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.c_if" signature="SnapshotExpectationValue.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="snapshotexpectationvalue-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.copy" signature="SnapshotExpectationValue.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotexpectationvalue-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.define_snapshot_register" signature="SnapshotExpectationValue.define_snapshot_register(circuit, label, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="snapshotexpectationvalue-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.inverse" signature="SnapshotExpectationValue.inverse()">
    Special case. Return self.
  </Function>

  <span id="snapshotexpectationvalue-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.is_parameterized" signature="SnapshotExpectationValue.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="snapshotexpectationvalue-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.mirror" signature="SnapshotExpectationValue.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotexpectationvalue-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.qasm" signature="SnapshotExpectationValue.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="snapshotexpectationvalue-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotExpectationValue.repeat" signature="SnapshotExpectationValue.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

